--- a/package.json
+++ b/package.json
@@ -8,6 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/nprogress": "^0.2.0",
+    "axios": "^0.21.1",
+    "element-plus": "^1.0.2-beta.28",
+    "js-cookie": "^2.2.1",
+    "lib-flexible": "^0.3.2",
+    "node-sass": "^5.0.0",
+    "nprogress": "^0.2.0",
+    "postcss-plugin-px2rem": "^0.8.1",
+    "px2rem-loader": "^0.1.9",
+    "sass": "^1.32.5",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
@@ -29,6 +39,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^7.0.0-0",
+    "sass-loader": "^10.1.1",
     "typescript": "~3.9.3"
   }
 }
